<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Küllemi bírálat</string>
    <string name="app_test_name">Figyelem, ez egy tesztverzió! 1.0</string>

    <string name="biralat_tipus">7</string>
    <string name="server_url">http://appserver.mgszh.gov.hu:8888/EnarPdaServer/sendxml</string>
    <string name="production_url">http://appserver.mgszh.gov.hu:8888/EnarPdaServer/sendxml</string>
    <string name="test_url">http://appserver-teszt.nebih.gov.hu:8888/EnarPdaServer/sendxml</string>
    <string name="support_email">kbr@flexisys.hu</string>
    <string name="crash_toast_text">Az alkalmazás belső hiba miatt leállt!\nKérjük, hogy a generált riportot változtatás nélkül küldje el számunkra!</string>

    <!--BASIC INTERFACE-->
    <string name="ok">OK</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="cancel">Mégse</string>
    <string name="clear">Törlés</string>

    <!--MENU-->
    <string name="menu_title">Küllemi Bírálati információs rendszer</string>
    <string name="menu_tenyeszetek">Tenyészetek kezelése</string>
    <string name="menu_egyedek">Egyedek leválogatása</string>
    <string name="menu_biralat">Bírálatok</string>
    <string name="menu_biralat_b">Bírálatböngésző</string>
    <string name="menu_biralat_counter">%1$d db feltöltetlen bírálat</string>

    <!--TENYESZET-->
    <string name="teny_menu_felvesz">Felvesz</string>
    <string name="teny_menu_letoltes">Letöltés</string>
    <string name="teny_menu_torles">Törlés</string>

    <string name="teny_felvesz_title">Kérjük adja meg a tenyészet kódját!</string>
    <string name="teny_felvesz_error_invalid">Nem megfelelő a tenyészetkód formátuma!</string>
    <string name="teny_felvesz_error_duplicate">Ez a tenyészet már szerepel a rendszerben!</string>

    <string name="teny_torles_title">Törli a kiválasztott telepeket?</string>
    <string name="teny_levalogatas_torles_title">Törli a tenyészet(ek)hez tartozó leválogatás(oka)t?</string>

    <string name="teny_notification_delete_biralat_title">A tenyészet feltöltetlen bírálatot tartalmaz!</string>
    <string name="teny_notification_delete_biralat_message">A tenyészet nem törölhető!</string>

    <string name="teny_notification_download_error_biralat_title">Addig nem lehet letölteni a tenyészetet, amíg a bírálatok feltöltése nem történt meg!</string>

    <string name="teny_notification_download_title">A letöltés eredménye</string>
    <string name="teny_notification_download_ok_title">Megérkeztek a letöltés adatai.</string>
    <string name="teny_notification_download_error_title">Sikertelen letöltés!</string>

    <string name="teny_progress_letoltes">Letöltés folyamatban…</string>
    <string name="teny_progress_torles">Törlés folyamatban…</string>

    <!--LEVÁLOGATÁS-->
    <string name="lev_teny_menu_torles">Leválogatás törlése</string>
    <string name="lev_teny_menu_kuld">Küldés</string>
    <string name="lev_teny_menu_tovabb">Tovább</string>

    <string name="lev_menu_torles">Minden egyed</string>
    <string name="lev_menu_levalogatas_torlese">Leválogatás törlése</string>
    <string name="lev_menu_mentes_kilepes">Mentés és kilépés</string>
    <string name="lev_menu_mentes">Mentés</string>
    <string name="lev_menu_szukites">Szűkítés</string>
    <string name="lev_menu_kivalasztottak">Kiválasztottak</string>

    <string name="lev_grid_header_num">#</string>
    <string name="lev_grid_header_ok">OK</string>
    <string name="lev_grid_header_enar">ENAR</string>
    <string name="lev_grid_header_es">ES</string>
    <string name="lev_grid_header_elles_datuma">Ellés Dátuma</string>
    <string name="lev_grid_header_szuletett">Született</string>
    <string name="lev_grid_header_kon">Kon</string>
    <string name="lev_grid_header_itv">ITV</string>
    <string name="lev_grid_empty">A kiválasztás nem tartalmaz egyedeket.</string>

    <string name="lev_szuk_menu_szukit">Szűkít</string>
    <string name="lev_szuk_menu_levalogatas_torlese">Leválogatás törlése</string>
    <string name="lev_szuk_menu_urit">Ürít</string>

    <string name="lev_selection_changed_dialog_title">Nem mentette el a leválogatást!</string>
    <string name="lev_selection_changed_dialog_message">Elmenti?</string>
    <string name="lev_selection_changed_dialog_mentes_kilepes">Mentés és kilépés</string>
    <string name="lev_selection_changed_dialog_kilepes">Kilépés</string>

    <string name="lev_teny_progress_torles">Törlés folyamatban…</string>
    <string name="lev_progress_levalogatas_torlese">Törlés folyamatban…</string>
    <string name="lev_progress_mentes">Mentés folyamatban…</string>
    <string name="lev_progress_szurok_torlese">Szűrők törlése folyamatban…</string>
    <string name="lev_progress_sorbarendezes">Sorbarendezés folyamatban…</string>
    <string name="lev_progress_szukites">Szűkítés folyamatban…</string>

    <string name="lev_dialog_biralat_enar">ENAR: %1$s</string>
    <string name="lev_dialog_biralat_counter">%1$d/%2$d</string>
    <string name="lev_dialog_biralat_datum">Bírálat dátuma: %1$s</string>

    <string name="lev_exp_dialog_enar">ENAR</string>
    <string name="lev_exp_dialog_haszn">HASZN</string>
    <string name="lev_exp_dialog_ell">Ellés dátum</string>
    <string name="lev_exp_dialog_konstr">Konstr</string>

    <!--BÍRÁLAT-->
    <string name="bir_menu_torles">Leválogatás törlése</string>
    <string name="bir_menu_biral">Bírál</string>

    <string name="bir_ker_check_hu_label">HU</string>
    <string name="bir_ker_check_ku_label">KU</string>
    <string name="bir_ker_keres">OK</string>
    <string name="bir_ker_biral">Bírál</string>
    <string name="bir_ker_itv_label">ITV</string>
    <string name="bir_ker_det_laktnapok_label">Lakt.napok:</string>
    <string name="bir_ker_det_laktszam_label">Lakt.szám:</string>
    <string name="bir_ker_det_elles_datuma_label">Ellés dátuma:</string>
    <string name="bir_ker_det_szuletes_label">Születés:</string>
    <string name="bir_ker_det_konstrkod_label">Konstr.kód:</string>
    <string name="bir_ker_det_szinkod_label">Színkód:</string>

    <string name="bir_ker_dialog_multi_title">Válasszon ENAR számot!</string>
    <string name="bir_ker_dialog_notfound_title">Nincs találat. Felvesz új egyedet?</string>
    <string name="bir_ker_dialog_notselected_title">Az egyed nincs kiválasztva bírálatra!</string>
    <string name="bir_ker_dialog_notselected_message">Kívánja bírálni?</string>

    <string name="bir_bir_dialog_unsaved_title">Az előző bírálat nincs mentve!</string>
    <string name="bir_bir_dialog_unsaved_message">Valóban új bírálatot akar kezdeni?</string>

    <string name="bir_bir_dialog_unfinished_title">Elveti a befejezetlen bírálatot?</string>

    <string name="bir_bir_dialog_exit_title">Valóban kilép, és elveti a bírálatot?</string>

    <string name="bir_bir_dialog_akako_title">Ön akadálykódot adott meg.</string>
    <string name="bir_bir_dialog_akako_message">Törli az eddig beírt értékeket?</string>

    <string name="bir_bir_dialog_ellda_title">30 napon belül ellett egyed nem bírálható!</string>
    <string name="bir_bir_dialog_lastbir_title">30 napon belül feltöltött bírálat!</string>

    <string-array name="bir_ker_dialog_notfound_orsko_list">
        <item>HU</item>
        <item>AT</item>
        <item>BE</item>
        <item>CZ</item>
        <item>DE</item>
        <item>DK</item>
        <item>EL</item>
        <item>FR</item>
        <item>HR</item>
        <item>IE</item>
        <item>IT</item>
        <item>LU</item>
        <item>NL</item>
        <item>PL</item>
        <item>RO</item>
        <item>SI</item>
        <item>SK</item>
        <item>UA</item>
        <item>UK</item>
    </string-array>

    <string name="bir_teny_progress_torles">Törlés folyamatban…</string>

    <!--BÖNGÉSZŐ-->
    <string name="bong_teny_kuld_error_nincs_friss_biralat">Csak friss bírálatokat lehet feltölteni!</string>
    <string name="bong_teny_kuld_error_unexported_biralat">A bírálatok feltöltése előtt azokat exportálni kell!</string>

    <string name="bong_menu_feltoltes">Feltöltés</string>
    <string name="bong_menu_tovabb">Tovább</string>
    <string name="bong_menu_export">Export</string>
    <string name="bong_menu_linearis">Linearis tulajdonságok</string>
    <string name="bong_szuk_menu_szukit">Szűkít</string>
    <string name="bong_szuk_menu_urit">Ürít</string>

    <string name="bong_grid_header_num">#</string>
    <string name="bong_grid_header_ok">OK</string>
    <string name="bong_grid_header_enar">ENAR</string>
    <string name="bong_grid_header_datum">Dátum</string>
    <string name="bong_grid_header_es">ES</string>

    <string name="bong_grid_header_ert1">TP</string>
    <string name="bong_grid_header_ert2">TE</string>
    <string name="bong_grid_header_ert3">LP</string>
    <string name="bong_grid_header_ert4">TO</string>
    <string name="bong_grid_header_ert5">BH</string>
    <string name="bong_grid_header_ert6">VP</string>

    <string name="bong_grid_header_a">A</string>
    <string name="bong_grid_header_itv">ITV</string>

    <string name="bong_teny_progress_kuldes">Küldés folyamatban…</string>

    <string name="bong_progress_sorbarendezes">Sorbarendezés folyamatban…</string>
    <string name="bong_progress_szukites">Szűkítés folyamatban…</string>
    <string name="bong_progress_delete">Törlés folyamatban…</string>
    <string name="bong_progress_export">Exportálás folyamatban…</string>

</resources>