<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kbr="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/kivalasztottak"
        android:title="@string/lev_menu_kivalasztottak"
        kbr:showAsAction="always"/>
    <item
        android:id="@+id/szukites"
        android:title="@string/lev_menu_szukites"
        kbr:showAsAction="always"/>

    <item
        android:id="@+id/mentes"
        android:title="@string/lev_menu_mentes"
        kbr:showAsAction="always"/>

    <item
        android:id="@+id/a_More"
        android:icon="@drawable/moreoverflow"
        android:title="More"
        kbr:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mentes_kilepes"
                android:title="@string/lev_menu_mentes_kilepes"
                kbr:showAsAction="always"/>

            <item
                android:id="@+id/torles"
                android:title="@string/lev_menu_torles"
                kbr:showAsAction="always"/>
            <item
                android:id="@+id/levalogatas_torles"
                android:title="@string/lev_menu_levalogatas_torlese"
                kbr:showAsAction="always"/>
        </menu>
    </item>
</menu>