<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:minWidth="350dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/dialog_title_textSize"
        android:layout_marginBottom="@dimen/dialog_title_margin"
        android:layout_height="wrap_content"
        android:text="Leválogatás exportálása" />

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/dialog_message_textSize"
                android:layout_marginBottom="@dimen/dialog_message_margin"
                android:layout_height="wrap_content"
                android:text="Formátum(ok) választása:" />

            <CheckBox
                android:id="@+id/dialog_export_checkBox_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PDF" />

            <CheckBox
                android:id="@+id/dialog_export_checkBox_csv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CSV" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/dialog_message_textSize"
                android:layout_marginBottom="@dimen/dialog_message_margin"
                android:layout_height="wrap_content"
                android:text="Sorrend választása:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioGroup
                    android:id="@+id/order_radioGroup"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/enar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lev_exp_dialog_enar" />

                    <RadioButton
                        android:id="@+id/haszn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lev_exp_dialog_haszn" />

                    <RadioButton
                        android:id="@+id/elles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lev_exp_dialog_ell" />

                    <RadioButton
                        android:id="@+id/konstr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lev_exp_dialog_konstr" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_export_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_menu_height"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/dialog_menu_textsize" />

        <Button
            android:id="@+id/dialog_export_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_menu_height"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/dialog_menu_textsize" />

    </LinearLayout>
</LinearLayout>